--- a/index.html
+++ b/index.html
@@ -9,31 +9,26 @@
 <body>
     <header class="header">
         <div class="container">
-            <h1 class="title"></h1>
-            <p class="sub-title">საქართველოს ისტორიაში ერთ-ერთი ყველაზე გამორჩეული ბრძოლა</p>
+            <h1 class="title">ჰალისის ბრძოლა</h1>
+            <p class="sub-title">978 წლის მნიშვნელოვანი გამარჯვება დავით კურაპალატმა</p>
         </div>
     </header>
 
     <section id="history" class="section">
         <div class="container">
             <h2>ისტორია</h2>
-            <p>1609 წელს ქართლში შემოიჭრნენ ოსმალების მოკავშირე ლეკები. მათი მიზანი იყო საქართველოს დასუსტება და შიდა ქართლის დაპყრობა. მეფე ლუარსაბ II-მა და კათოლიკოსმა ნიკოლოზმა, ცნობილმა როგორც ნიკოლოზ გულიაშვილი, გაბედულად გაუწიეს წინააღმდეგობა. ბრძოლა გაიმართა სოფელ ჰალისში, სადაც ქართველებმა დაამარცხეს ლეკთა ჯარი.</p>
+            <p>ჰალისის ბრძოლა გაიმართა 978 წელს ბიზანტიის იმპერიასა და ამბოხებულ ბარდა სკლიაროსს შორის. ბიზანტიელებს დაეხმარა ტაოს მმართველი დავით III კურაპალატი, რომელიც 12,000 ქართველ ჯარით მივიდა ბრძოლის ველზე. დავითმა და ბასილ II-მ გაანადგურეს სკლიაროსის ჯარი ჰალისთან, რითაც ბიზანტიის იმპერია გადარჩა და ქართველების ავტორიტეტი რეგიონში მნიშვნელოვნად გაიზარდა.</p>
         </div>
     </section>
 
     <section id="heroes" class="section">
         <div class="container">
-            <h2>გმირები</h2>
+            <h2>გმირი</h2>
             <div class="cards">
                 <div class="card">
-                    <img src="assets/images/lursab.jpg" alt="ლუარსაბ II">
-                    <h3>ლუარსაბ II</h3>
-                    <p>ქართლის მეფე, რომელიც ხელმძღვანელობდა ბრძოლას.</p>
-                </div>
-                <div class="card">
-                    <img src="assets/images/nikoloz.jpg" alt="ნიკოლოზ გულიაშვილი">
-                    <h3>ნიკოლოზ გულიაშვილი</h3>
-                    <p>კათოლიკოს-პატრიარქი, მეფის მრჩეველი და ბრძოლის შთამაგონებელი.</p>
+                    <img src="assets/images/davit-kurapalati.jpg" alt="დავით III კურაპალატი">
+                    <h3>დავით III კურაპალატი</h3>
+                    <p>ტაოს მეფე და გამორჩეული მხედართმთავარი, რომელმაც გადაწყვიტა ბრძოლის ბედი.</p>
                 </div>
             </div>
         </div>
