--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <h1 class="title">ჰალისის ბრძოლა</h1>
+            <h1 class="title"></h1>
             <p class="sub-title">978 წლის მნიშვნელოვანი გამარჯვება დავით კურაპალატმა</p>
         </div>
     </header>
