--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="container">
             <h1 class="title"></h1>
-            <p class="sub-title">978 წლის მნიშვნელოვანი გამარჯვება დავით კურაპალატმა</p>
+            <p class="sub-title">978 წლის დავით კურაპალატის მნიშვნელოვანი გამარჯვება</p>
         </div>
     </header>
 
